# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in: Made all acronym and
	expanded-acronym elements untranslatable. The acronyms used here are
	only hardly translatable, so we let it be.
	(chemical/x-cdx, chemical/x-cdxml): Improved MIME type description.

2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* autogen.sh: Fixed a typo.
	(AUTOMAKE_FILES): Define list depending on the automake version.

	* configure.ac: Fixed description of `--with-pixmaps' option. Replaced
	`--with-gnome-theme' with the more appropriate `--with-hicolor-theme'
	option. The latter also changed all relevant variables. Further
	removed the `--with-kde-theme' option. This option is obsolete with
	these changes.
	(AM_INIT_AUTOMAKE): Fixed macro usage. Providing AC_PACKAGE_ variables
	to this macro is obsolete.
	(KDE_CONFIG, with_kde_mime): Improved path search by using
	`kde-config'.
	(BOOL_*): Fixed/improved boolean variables.
	(AC_CONFIG_FILES): Removed icons/crystalsvg/Makefile, that was
	removed.

	* icons/hicolor/Makefile.am:
	* icons/pixmaps/Makefile.am: Changed theme related variables
	accordingly to the changes in configure.ac.

	* icons/Makefile.am (SUBDIRS):
	* icons/crystalsvg/Makefile.am:
	* icons/crystalsvg/chemistry.svg:
	* icons/pixmaps/Makefile.am (pixmaps_list):
	* icons/pixmaps/chemistry.png: The crystalsvg directory was completely
	removed from the package. Instead only the desktop-neutral places for
	theme and on-theme icons are used. So a raster image for the KDE 3
	.desktop files is installed into non-theme icons for the moment.

	* src/chemical-mime-database.xml.in: Fixed an issue in the mime-type
	element definition. sub-class-of may not appear. Added
	chemical/x-cdxml, chemical/x-ncbi-asn1 and
	chemical/x-ncbi-asn1-binary.
	(chemical/x-cdx): Added magic pattern based on the format description
	at cambridgesoft.com.